# FFmpegPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kevin/kevinplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  KevinPlayer.cpp  KevinPlayer.h  Test.cpp  Test.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/kevin/kevinplayer/: Flags.java  KevinPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kevin/kevinplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
